fix(banner): set z-index for non-sticky header navbar (#233)

--- a/modules/banner/assets/hb/modules/banner/scss/index.scss
+++ b/modules/banner/assets/hb/modules/banner/scss/index.scss
@@ -16,6 +16,10 @@
             --#{$prefix}navbar-brand-color: #fff;
 
             background: transparent !important;
+
+            @if not $hb-header-sticky {
+                z-index: 1030;
+            }
         }
 
         .navbar-toggler {
